@@ -1,8 +1,8 @@
 Package: gogarch
-Version: 0.6-7
+Version: 0.6-8
 Type: Package
 Title: Generalized Orthogonal GARCH (GO-GARCH) models
-Date: 2009-02-23
+Date: 2009-03-06
 Author: Bernhard Pfaff
 Maintainer: Bernhard Pfaff <bernhard@pfaffikus.de>
 Depends: R (>= 2.7.0), methods, stats, graphics, fGarch, fastICA
@@ -11,5 +11,5 @@ Description: Implementation of the GO-GARCH model class
 License: GPL (>= 2)
 LazyLoad: yes
 LazyLoad: yes
-Revision: 28
-Packaged: Tue Feb 24 05:11:06 2009; rforge
+Revision: 31
+Packaged: Mon Mar  9 05:13:26 2009; rforge
